# spacegame

./: .gitignore  CMakeLists.txt  README.md  build.sh  shell.html
src/: battle.cpp  battle.h  cards.hpp  game_loop.cpp  game_loop.h  geometry.cpp  geometry.h  main.cpp  overworld.cpp  overworld.h  player.cpp  player.h  states.hpp
